ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - AWStats:                                              |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-09-09 Raphael Geissert
    - ENGINE:
        * Fixed #653: Error starting apache when mod_cband is enabled

2007-09-08 Raphael Geissert
    - GUI:
        * Fixed some scripts which were displaying domain names in the IDN-encoded form

2007-09-07 Raphael Geissert
    - GUI:
        * Fixed #651: Undefined index: gender in gui/include/reseller-functions.php on line 679
        * Fixed #655: Undefined index: user_theme in gui/client/index.php on line 257
        * Fixed #655: Undefined index: user_def_lang in gui/client/index.php on line 259
        * Fixed #633: alias name in IDN format in client/edit_alias.php
        * Fixed #637: Undefined variable: input in gui/include/input-checks.php on line 100
        * Fixed #638: reseller/order_settings.php should point to BASE_SERVER_VHOST
        * Fixed #643: typo in server traffic page
        * Fixed #652: Session timeout error, doesn't abort
        * Fixed #640: reseller/domain_details.php displays domain in IDN format

2007-09-04 Malte Geierhos
	- GUI
		* Fixed #650 $vfs not defined inside function

2007-09-03 Raphael Geissert
    - DOCS:
        * Fixed #627: chkrootkit is missing on the package list
    - GUI:
        * Fixed #629: : doesn't exist or can't be read.
    - SETUP:
        * Fixed #628: rkhunter during the setup

2007-09-03 Malte Geierhos
	- GUI:
		* Fixed editing of ftp Accounts with custom dir doesn't work
		* Fixed PMA css (pictures have wrong path)
		* Fixed #611 (wrong path / image preloader)
		* Fixed #486 Page Width too wide on some Pages (with ie7)

2007-09-02 Benedikt Heintel
	- GUI: