@@ -14,13 +14,13 @@ Version = 1.0.0 RC2 OMEGA
 
 VersionH = 1.0 Priamos
 
-DEFAULT_ADMIN_ADDRESS =
+DEFAULT_ADMIN_ADDRESS = support@localhost
 
-SERVER_HOSTNAME = gentoo
+SERVER_HOSTNAME = localhost
 
 BASE_SERVER_IP = 127.0.0.1
 
-BASE_SERVER_VHOST =
+BASE_SERVER_VHOST = admin.localhost
 
 MR_LOCK_FILE = /tmp/ispcp.lock
 
@@ -86,7 +86,7 @@ DATABASE_HOST = localhost
 
 DATABASE_NAME = ispcp
 
-DATABASE_PASSWORD =
+DATABASE_PASSWORD = VjPhCIL4h0w=
 
 DATABASE_USER = root
 
@@ -120,7 +120,7 @@ PHP5_FASTCGI_BIN = /usr/lib/php5/bin/php-cgi
 # ProFTPd data
 #
 
-FTPD_CONF_FILE = /etc/proftpd.conf
+FTPD_CONF_FILE = /etc/proftpd/proftpd.conf
 
 #
 # BIND data
@@ -128,15 +128,16 @@ FTPD_CONF_FILE = /etc/proftpd.conf
 
 BIND_CONF_FILE = /etc/bind/named.conf
 
-BIND_DB_DIR = /var/cache/bind
+BIND_DB_DIR = /var/bind
 
-SECONDARY_DNS =
+SECONDARY_DNS = 194.169.205.2
 
 #
 # AWSTATS data
 #
+AWSTATS_ACTIVE = yes
 # Either no or path to the awstats configs dir (mostly: /etc/awstats)
-AWSTATS_DIR = no
+AWSTATS_DIR = /etc/awstats/
 
 AWSTSTS_ROOT_DIR = /var/www/ispcp/engine/awstats
 
@@ -187,7 +188,7 @@ MTA_LOCAL_MAIL_DIR = /var/mail
 
 MTA_VIRTUAL_MAIL_DIR = /var/mail/virtual
 
-MTA_LOCAL_ALIAS_HASH = /etc/aliases
+MTA_LOCAL_ALIAS_HASH = /etc/mail/aliases
 
 MTA_VIRTUAL_CONF_DIR = /etc/postfix/ispcp
 
@@ -201,9 +202,9 @@ MTA_TRANSPORT_HASH = /etc/postfix/ispcp/transport
 
 MTA_SENDER_ACCESS_HASH = /etc/postfix/ispcp/sender-access
 
-MTA_MAILBOX_MIN_UID = 1004
+MTA_MAILBOX_MIN_UID = 1000
 
-MTA_MAILBOX_UID = 1004
+MTA_MAILBOX_UID = 1000
 
 MTA_MAILBOX_UID_NAME = vmail
 
@@ -215,7 +216,7 @@ MTA_SASLDB_LOCAL_DOMAIN = isp-control.net
 
 MTA_SASLDB_FILE = /var/spool/postfix/etc/sasldb2
 
-ETC_SASLDB_FILE = /etc/sasldb2
+ETC_SASLDB_FILE = /etc/sasl2/sasldb2
 
 CMD_SASLDB_LISTUSERS2 = /usr/sbin/sasldblistusers2
 
@@ -231,7 +232,7 @@ CMD_NEWALIASES = /usr/bin/newaliases
 
 COURIER_CONF_DIR = /etc/courier-imap
 
-AUTHLIB_CONF_DIR = /etc/courier
+AUTHLIB_CONF_DIR = /etc/courier/authlib
 
 CMD_MAKEUSERDB = /usr/sbin/makeuserdb
 
@@ -252,7 +253,7 @@ CMD_CRONTAB = /usr/bin/crontab
 #
 
 # Either no or path to the amavis-daemon (mostly: /etc/init.d/amavis)
-CMD_AMAVIS = no
+CMD_AMAVIS = /etc/init.d/amavisd
 
 CMD_AUTHD = /etc/init.d/courier-authlib
 
@@ -260,9 +261,9 @@ CMD_FTPD = /etc/init.d/proftpd
 
 CMD_HTTPD = /usr/sbin/apache2ctl
 
-CMD_IMAP = /etc/init.d/courier-imap
+CMD_IMAP = /etc/init.d/courier-imapd
 
-CMD_IMAP_SSL = /etc/init.d/courier-imap-ssl
+CMD_IMAP_SSL = /etc/init.d/courier-imapd-ssl
 
 CMD_MTA = /etc/init.d/postfix
 
@@ -270,7 +271,7 @@ CMD_NAMED = /etc/init.d/named
 
 CMD_POP = /etc/init.d/courier-pop3d
 
-CMD_POP_SSL = /etc/init.d/courier-pop-ssl
+CMD_POP_SSL = /etc/init.d/courier-pop3d-ssl
 
 CMD_ISPCPD = /etc/init.d/ispcp_daemon
 
@@ -355,44 +356,3 @@ HTPASSWD_CMD = /usr/sbin/htpasswd2
 #
 # backup management
 #
-
-BACKUP_FILE_DIR = /var/www/ispcp/backups
-
-### Deprecated ###
-## ToDo: Config it by MySQL via Interface!
-###
-
-# Whitelist some IP numbers here (WARNING! DO NOT WHITELIST SO MUCH!!)
-# e.g. 1.2.3.4,4.3.2.1
-SEC_IP_WHITELIST =
-
-# Do not send emails when these IP numbers are accessing
-# e.g. 1.2.3.4,4.3.2.1
-SEC_IP_NO_EMAIL =
-
-# Ignore these non-existing sub-domains. This reduces the amount of mails
-# e.g. when you have created lots of sub domains, the spiders came around
-# and you have deleted them after a while.
-SEC_DOMAIN_NO_EMAIL =
-
-# Allow direct accesses on your IP number? (true/false)
-SEC_ALLOW_IP_ACCESS = false
-
-# Allow direct accesses on your hostname? (true/false)
-SEC_ALLOW_HOSTNAME_ACCESS = false
-
-# Allowed request methods? (the default are mostly fine)
-# e.g. GET,POST,HEAD
-SEC_REQUEST_METHODS = GET,POST,HEAD
-
-# Allowed server protocols? (the default are in 99.999% cases fine)
-# e.g. HTTP/1.0,HTTP/1.1
-SEC_SERVER_PROTOCOLS = HTTP/1.0,HTTP/1.1
-
-# Check these entries in _SERVER for correct IP numbers or hostnames
-# Please leave this alone!
-SEC_VALIDATE_IP_HOSTNAME = SERVER_NAME,HTTP_HOST
-
-# Filter more things on bad tags in _SERVER
-# Please leave this alone!
-SEC_FILTER_TAGS = HTTP_VIA,HTTP_X_FORWARDED_FOR
