@@ -6,6 +6,12 @@ ispCP ω 1.0.0 Changelog
 |               * gui: disable stats-alias in client menu         |
 \_________________________________________________________________/
 
+2007-09-11 Benedikt Heintel
+	- DISTS:
+		* Fixed #649: working gentoo config (Thank you Lelik)
+	- TOOLS:
+		* Fixed #661: phpMyAdmin wrong configured
+
 2007-09-09 Raphael Geissert
     - ENGINE:
         * Fixed #653: Error starting apache when mod_cband is enabled
